2004-12-06  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/menu-tree.c:
	(menu_tree_add_menu_file_monitor): add anal
	assertion.
	(menu_tree_force_recanonicalize): remove the
	menu file monitors whether the we've previously
	found a menu file or not.
	(find_path): handle the root path correctly.

2004-12-05  Simos Xenitellis  <user@kl.asia.com>

	* configure.in: Added "el" to ALL_LINGUAS.

2004-12-05  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in: Added "lt" to ALL_LINGUAS.

2004-12-04  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2004-12-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* libmenu/desktop-entries.c: (desktop_entry_copy):
	Copy the right string for icon field.

2004-11-30  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.9.3.

==================== 2.9.2 ====================

2004-11-30  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.9.2.

2004-11-29  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/entry-directories.c:
	(cached_dir_update_entry),
	(cached_dir_remove_subdir): fix another couple of leaks.
	
	* COPYING, COPYING.LIB: add the LGPL since autofoo
	seems determined that COPYING should be the GPL.
	
2004-11-29  Mark McLoughlin  <mark@skynet.ie>
	
	Patch from Frederic Crozat <fcrozat@mandrakesoft.com>

	* libmenu/desktop-entries.c: (desktop_entry_unref): don't leak
	the path.
	
	* libmenu/entry-directories.c:
	(cached_dir_clear_entries): iterate over the entries list, not
	the subdirs list.
	(cached_dir_remove_entry): don't leak the entry.

2004-11-27  Hasbullah Bin Pit<sebol@my-penguin.org>

        * configure.in: Added 'ms' (Malay) to ALL_LINGUAS.

2004-11-25  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-11-24  Amampreet Singh Alam<amanlinux@netscape.net>

	* configure.in: Added pa to ALL_LINGUAS

2004-11-15  Hendrik Brandt  <hebra@cvs.gnome.org>

	* configure.in: Added de to ALL_LINGUAS.
